--- a/.github/workflows/angular-deploy.yml
+++ b/.github/workflows/angular-deploy.yml
@@ -26,4 +26,9 @@ jobs:
       uses: jakejarvis/s3-sync-action@master
       with:
         args: --delete
-    
+      env:
+        AWS_S3_BUCKET: ccms-angular-ui
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_REGION: ap-south-1
+        SOURCE_DIR: dist/ccms
