--- a/angular.json
+++ b/angular.json
@@ -5,7 +5,6 @@
   "projects": {
     "ccms": {
       "projectType": "application",
-      "schematics": {},
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
@@ -25,66 +24,26 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
-
-              "src/assets/css/bootstrap-icons.min.css",
-              "src/assets/css/apexcharts.css",
-              "src/assets/css/jsvectormap.min.css",
-              "src/assets/css/overlayscrollbars.min.css",
-              "src/assets/css/index.css"
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/admin-lte/dist/css/adminlte.min.css",
+              "src/styles.css"
             ],
             "scripts": [
-              "src/assets/js/popper.min.js",
-              "src/assets/js/bootstrap.min.js",
-
-              "src/assets/js/apexcharts.min.js",
-              "src/assets/js/jsvectormap.min.js",
-              "src/assets/js/overlayscrollbars.browser.es6.min.js",
-              "src/assets/js/world.js"
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
+              "node_modules/admin-lte/dist/js/adminlte.min.js"
             ]
           },
           "configurations": {
             "development": {
-              "fileReplacements": [
-                {
-                  "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.ts"
-                }
-              ],
               "optimization": false,
-              "extractLicenses": false,
               "sourceMap": true
             },
             "qa": {
-              "fileReplacements": [
-                {
-                  "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.qa.ts"
-                }
-              ],
               "optimization": false,
-              "extractLicenses": false,
               "sourceMap": true
             },
             "production": {
-              "fileReplacements": [
-                {
-                  "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.prod.ts"
-                }
-              ],
-              "budgets": [
-                {
-                  "type": "initial",
-                  "maximumWarning": "500kb",
-                  "maximumError": "1mb"
-                },
-                {
-                  "type": "anyComponentStyle",
-                  "maximumWarning": "2kb",
-                  "maximumError": "4kb"
-                }
-              ],
               "outputHashing": "all"
             }
           },
@@ -92,6 +51,7 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "defaultConfiguration": "development",
           "configurations": {
             "development": {
               "buildTarget": "ccms:build:development"
@@ -102,45 +62,6 @@
             "production": {
               "buildTarget": "ccms:build:production"
             }
-          },
-          "defaultConfiguration": "development"
-        },
-        "extract-i18n": {
-          "builder": "@angular-devkit/build-angular:extract-i18n",
-          "options": {
-            "buildTarget": "ccms:build"
-          }
-        },
-        "test": {
-          "builder": "@angular-devkit/build-angular:karma",
-          "options": {
-            "polyfills": [
-              "zone.js",
-              "zone.js/testing"
-            ],
-            "tsConfig": "tsconfig.spec.json",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
-            "styles": [
-              "src/styles.css",
-
-              "src/assets/css/bootstrap-icons.min.css",
-              "src/assets/css/apexcharts.css",
-              "src/assets/css/jsvectormap.min.css",
-              "src/assets/css/overlayscrollbars.min.css",
-              "src/assets/css/index.css"
-            ],
-            "scripts": [
-              "src/assets/js/popper.min.js",
-              "src/assets/js/bootstrap.min.js",
-
-              "src/assets/js/apexcharts.min.js",
-              "src/assets/js/jsvectormap.min.js",
-              "src/assets/js/overlayscrollbars.browser.es6.min.js",
-              "src/assets/js/world.js"
-            ]
           }
         }
       }
