--- a/package.json
+++ b/package.json
@@ -18,7 +18,16 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "admin-lte": "^3.2.0",
+    "apexcharts": "^5.3.6",
+    "bootstrap": "^4.6.2",
+    "bootstrap-icons": "^1.13.1",
+    "jquery": "^3.7.1",
+    "jsvectormap": "^1.7.0",
+    "overlayscrollbars": "^2.13.0",
+    "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
+    "sortablejs": "^1.15.6",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
