--- a/angular.json
+++ b/angular.json
@@ -26,6 +26,8 @@
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/admin-lte/dist/css/adminlte.min.css",
+                        
+              "node_modules/primeicons/primeicons.css",
               "src/styles.css"
             ],
             "scripts": [
