--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.3.0",
+    "@angular/animations": "^17.3.12",
     "@angular/common": "^17.3.0",
     "@angular/compiler": "^17.3.0",
     "@angular/core": "^17.3.0",
@@ -18,14 +18,21 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "@ng-bootstrap/ng-bootstrap": "^15.1.2",
+    "@popperjs/core": "^2.11.8",
+    "@primeng/themes": "^21.0.2",
     "admin-lte": "^3.2.0",
     "apexcharts": "^5.3.6",
     "bootstrap": "^4.6.2",
     "bootstrap-icons": "^1.13.1",
+    "chart.js": "^4.5.1",
     "jquery": "^3.7.1",
     "jsvectormap": "^1.7.0",
+    "ng2-charts": "^8.0.0",
     "overlayscrollbars": "^2.13.0",
     "popper.js": "^1.16.1",
+    "primeicons": "^7.0.0",
+    "primeng": "^16.9.1",
     "rxjs": "~7.8.0",
     "sortablejs": "^1.15.6",
     "tslib": "^2.3.0",
