--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^4.6.2",
     "bootstrap-icons": "^1.13.1",
     "chart.js": "^4.5.1",
+    "crypto-js": "^4.2.0",
     "jquery": "^3.7.1",
     "jsvectormap": "^1.7.0",
     "ng2-charts": "^8.0.0",
